--- a/style.css
+++ b/style.css
@@ -1,59 +1,61 @@
 @charset "UTF-8";
 
-/* CSS Document */
-
-
 /* Canvas用CSS*/
 
-body{
-    max-width: 1200px;
+body {
+
+    max-width:500px;
 }
 
 canvas {
     margin-top: 50px;
     margin-left: 50px;
     border: solid 3px gray;
+    width: 300px;
+    height: 300px;
+    float: left;
+
 }
 
-form {
-    margin-left: 100px;
-}
-
-#yoko {
-    margin-left: 80px;
-    font-size: 21px;
-}
-
+#yoko,
 #tate {
     margin-left: 50px;
-    font-size: 21px;
+    margin-top: 20px;
+    font-size: 15px;
+    float: left;
 }
+
 
 input[type="text"] {
     margin-left: 10px;
     margin-right: 5px;
     font-size: 20px;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
 }
 
-#siten{
-    clear: both;
-    margin-left:10px;
-    font-size: 21px;
-    float: left;
+#siten {
+    margin-left: 180px;
+    font-size: 15px;
+    left: 50%;
 }
 
-#start_point{
-    margin-left:10px;
+#start_point {
+    margin-left: 10px;
     font-size: 21px;
 }
 
 input[type="button"] {
     color: steelblue;
-    padding: 5px;
+    padding: 3px;
     margin: 10px;
     margin-bottom: 30px;
+    float: left;
+    font-size: 10px;
+}
+
+#sokudo {
+    margin-left: 180px;
     float: left;
 }
 
