--- a/style.css
+++ b/style.css
@@ -2,69 +2,70 @@
 
 /* Canvas用CSS*/
 
-body {
-
-    max-width:500px;
-}
-
-canvas {
-    margin-top: 50px;
-    margin-left: 50px;
-    border: solid 3px gray;
-    float: left;
-}
-
-#yoko,
-#tate {
-    margin-left: 50px;
-    margin-top: 20px;
-    font-size: 15px;
-    float: left;
-}
-
-
-input[type="text"] {
-    margin-left: 10px;
-    margin-right: 5px;
-    font-size: 20px;
-    width: 25px;
-    height: 25px;
-}
-
-#siten {
-    margin-left: 180px;
-    font-size: 15px;
-    left: 50%;
-}
-
-#start_point {
-    margin-left: 10px;
-    font-size: 21px;
-}
-
-input[type="button"] {
-    color: steelblue;
-    padding: 3px;
-    margin: 10px;
-    margin-bottom: 30px;
-    float: left;
-    font-size: 10px;
-}
-
-#sokudo {
-    margin-left: 180px;
-    float: left;
-}
-
-
-/* ここまで */
-
-body {
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
 }
 
 html,
 body {
-    height: 100%;
+  height: 100%;
+}
+
+body {
+  max-width: 400px;
+  margin: 0;
+  padding: 0;
+}
+
+canvas {
+  margin-top: 50px;
+  margin-left: 50px;
+  border: solid 3px gray;
+}
+
+#yoko,
+#tate {
+  margin-left: 50px;
+  margin-top: 20px;
+  font-size: 15px;
+}
+
+
+input[type="text"] {
+  margin-left: 10px;
+  margin-right: 5px;
+  font-size: 20px;
+  width: 25px;
+  height: 25px;
+}
+
+.start_point {
+  text-align: center;
+  margin: 1em 0;
+}
+
+#siten {
+  margin-left: 180px;
+  font-size: 15px;
+}
+
+#start_point {
+  margin-left: 10px;
+  font-size: 21px;
+}
+
+.control {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 1em 0;
+}
+
+.control button {
+  color: steelblue;
+  width: 8em;
+}
+
+#sokudo {
+  margin-left: 180px;
 }
