--- a/style.css
+++ b/style.css
@@ -6,15 +6,9 @@
   box-sizing: border-box;
 }
 
-html,
-body {
-  height: 100%;
-}
-
-body {
+.container {
   max-width: 400px;
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
 }
 
 canvas {
