ウィンドウサイズに合わせて文字や余白、点Pの大きさなどを自動設定

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 3vw;
+}
+
 .container {
   margin: 0 auto;
   text-align: center;
@@ -16,10 +20,16 @@
 canvas {
   border: solid 3px gray;
   background-color: white;
+  margin-top: 1rem
 }
 
 input[type="text"] {
-  width: 30px;
+  width: 2rem;
+  height: 1.5rem;
+}
+
+select {
+  height: 1.5rem;  
 }
 
 .set {
@@ -30,13 +40,13 @@ input[type="text"] {
 .length {
   display: flex;
   justify-content: space-around;
-  margin: 1em 0;
+  margin: 2rem 0;
 }
 
 .setting {
   display: flex;
   justify-content: space-around;  
-  margin: 1em 0;
+  margin: 2rem 0;
 }
 
 .control {
@@ -47,6 +57,7 @@ input[type="text"] {
 }
 
 .control button {
+  font-size: 1rem;
   color: steelblue;
   width: 25%;
 }
