--- a/style.css
+++ b/style.css
@@ -3,81 +3,85 @@
 /* Canvas用CSS*/
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 3vw;
+  font-size: 3vw;
 }
 
 html {
-    font-size: 3vw;
+  font-size: 3vw;
 }
 
 .container {
-    margin: 0 auto;
-    text-align: center;
-    background-color: beige;
-    padding: 4%;
+  margin: 0 auto;
+  text-align: center;
+  background-color: beige;
+  padding: 4%;
 }
 
 canvas {
-    border: solid 3px gray;
-    background-color: white;
+  border: solid 3px gray;
+  background-color: white;
 }
 
 input[type="text"] {
-    border: solid 3px gray;
-    background-color: white;
-    margin-top: 1rem;
-    font-size: 2rem;
-    width: 3rem;
-    height: 3rem;
+  border: solid 3px gray;
+  background-color: white;
+  margin-top: 1rem;
+  font-size: 2rem;
+  width: 3rem;
+  height: 3rem;
 }
 
+#seconds{
+  font-size: 3rem;
+}
 
 select {
-    height: 2rem;
-    font-size: 1rem;
+  height: 2rem;
+  font-size: 1rem;
 }
 
 .set {
-    font-size: 3vw;
-    width: 30%;
-    text-align: left;
+  font-family: sans-serif;
+  font-size: 3vw;
+  width: 30%;
+  text-align: left;
 }
 
 .length {
-    display: flex;
-    justify-content: space-around;
-    margin: 1em 0;
+  display: flex;
+  justify-content: space-around;
+  margin: 1em 0;
 }
 
 .setting {
-    display: flex;
-    justify-content: space-around;
-    margin: 1em 0;
-    display: flex;
-    justify-content: space-around;
-    margin: 2rem 0;
+  display: flex;
+  justify-content: space-around;
+  margin: 1em 0;
+  display: flex;
+  justify-content: space-around;
+  margin: 2rem 0;
 }
 
 .setting {
-    display: flex;
-    justify-content: space-around;
-    margin: 2rem 0;
+  display: flex;
+  justify-content: space-around;
+  margin: 2rem 0;
 }
 
 .control {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 1em 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 1em 0;
 }
 
 
 .control button {
-    color: steelblue;
-    width: 30%;
-    font-size: 3vw;
+  color: steelblue;
+  width: 30%;
+  font-size: 3vw;
 }
